--- a/jetstream/static/jetstream/css/blocks/image-panel-link.less
+++ b/jetstream/static/jetstream/css/blocks/image-panel-link.less
@@ -20,28 +20,6 @@
       display: block;
       position: relative;
 
-      .text-gradient {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
-        font-family: @font_vaud_medium;
-        font-size: 16px;
-
-        .image-link-caption {
-          position: absolute;
-          bottom: 10px;
-          right: 15px;
-          text-align: right;
-          color: white;
-
-          .glyphicon.glyphicon-chevron-right {
-            color: @orange;
-          }
-        }
-      }
     }
 
     &.top-level {
